--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   get: ^4.6.6
   shared_preferences: ^2.2.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
